--- a/templates/model.html
+++ b/templates/model.html
@@ -112,6 +112,21 @@
       </div>
     </div>
 
+
+    <div class="row align-items-md-stretch">
+      <div class="col-md-12">
+        <div class="h-100 p-5 text-black bg-light border border-primary rounded-3">
+          <h2>Homework #1</h2>
+          <p>Build the 2-layer neural networks</p>
+          <button class="btn btn-primary btn-lg" type="button" onclick="window.location.href='/pipeline/model/hw1';">Try it!</button>
+          
+          
+        </div>
+      </div>
+    </div>
+
+    <br>
+
     <div class="row align-items-md-stretch">
       <div class="col-md-6">
         <div class="h-100 p-5 text-white bg-dark rounded-3">
