--- a/templates/model_scenario_SLFN.html
+++ b/templates/model_scenario_SLFN.html
@@ -208,6 +208,7 @@
               <div class="form-floating mb-3">
                 <select class="form-select" id="select_activationFunction" placeholder="10" name="activationFunction" method="GET"  style="font-size:15px;"> 
                   <option value= "ReLU" SELECTED>ReLU</option>
+                  <option value= "tanh" >tanh</option>
                 </select>
                 <label for="select_activationFunction">Activation function</label>
               </div>
