--- a/templates/develop.html
+++ b/templates/develop.html
@@ -126,6 +126,15 @@
 
               <p class="display-6 fw-bold" Align="center">
                 <div class="mb-3" Align="center">
+                  <label class="form-label">Homework 1</label>
+                  <br>
+                  <button class="btn btn-primary btn" type="button"
+                  onclick="window.location.href='/pipeline/develop/hw1';">Download codes</button>
+                </div>
+              </p>
+
+              <p class="display-6 fw-bold" Align="center">
+                <div class="mb-3" Align="center">
                   <label class="form-label">Matching</label>
                   <br>
                   <button class="btn btn-primary btn" type="button"
@@ -169,6 +178,13 @@
                 <label class="col-md-12 fs-2 fw-bold" Align="center">Upload your module</label>
                 
                 <br><br>
+
+                <p class="display-6 fw-bold" Align="center">
+                  <div class="mb-3" Align="center">
+                    <label for="module_matching" class="form-label">Homework 1</label>
+                    <input class="form-control" type="file" id="module_hw1" name="uploaded_module_hw1">
+                  </div>
+                </p>
 
                 <p class="display-6 fw-bold" Align="center">
                   <div class="mb-3" Align="center">
