--- a/templates/develop.html
+++ b/templates/develop.html
@@ -120,7 +120,7 @@
 
           <div class="p-5 mb-4 bg-light rounded-3">
             <div class="container-fluid py-5">
-              <label class="col-md-12 fs-2 fw-bold" Align="center">Download module templates</label>
+              <label class="col-md-12 fs-2 fw-bold" Align="center">Download code templates</label>
               
               <br><br>
 
@@ -175,7 +175,7 @@
 
               <form action="/pipeline/develop" method="post" enctype="multipart/form-data">
 
-                <label class="col-md-12 fs-2 fw-bold" Align="center">Upload your module</label>
+                <label class="col-md-12 fs-2 fw-bold" Align="center">Upload your code</label>
                 
                 <br><br>
 
