--- a/templates/hw1.html
+++ b/templates/hw1.html
@@ -124,8 +124,8 @@
 
     <div class="p-5 mb-1 bg-light rounded-3">
       <div class="container-fluid py-0">
-        <h1 class="display-6 fw-bold">2-Layer Neural Networks;</h1>
-        <h3 class="display-6 fw-bold">Single-hidden Layer Feed-forward Neural Networks (SLFN)</h3>
+        <h1 class="display-6 fw-bold">Homework #1</h1>
+        <!-- <h3 class="display-6 fw-bold">Single-hidden Layer Feed-forward Neural Networks (SLFN)</h3> -->
         <br>
         <p class="col-md-12 fs-6">Single-hidden layer feedforward neural network (SLFN) is among 
           the most often used neural network architectures. It has been extensively utilized to 
